--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,59 @@
-# sphinx build directories
-_build/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
 
-# dotfiles
-.*
-!.gitignore
-# compiled python files
-*.py[co]
-# setup.py egg_info
-*.egg-info
-# emacs backup files
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+env/
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+
+# Translations
+*.mo
+
+# Pycharm
+.idea
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Rope
+.ropeproject
+
+# Sphinx documentation
+docs/_build/
+
+# Backup files
 *~
-# hg stuff
-*.orig
-status
-# odoo filestore
-openerp/filestore
-# maintenance migration scripts
-openerp/addons/base/maintenance
+*.swp
 
-# generated for windows installer?
-install/win32/*.bat
-install/win32/meta.py
-
-# various virtualenv
-/bin/
-/build/
-/dist/
-/include/
-/lib/
-/man/
-/share/
-/src/
+# OSX Files
+*.DS_Store
