[FIX] .travis.yml add pysftp

--- a/.travis.yml
+++ b/.travis.yml
@@ -77,7 +77,8 @@ virtualenv:
 #  - gem install compass --pre
 
 install:
-  - pip install validate_email  
+  - pip install validate_email
+  - pip install pysftp  
   - git clone --depth=1 https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - travis_install_nightly
